--- a/KarliCards.Gui/OptionsWindow.xaml
+++ b/KarliCards.Gui/OptionsWindow.xaml
@@ -12,6 +12,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
+
             <RowDefinition Height="58"/>
             <RowDefinition Height="20"/>
             <RowDefinition />
@@ -72,6 +73,18 @@ Name="cheatingAIRadioButton" Checked="cheatingAIRadioButton_Checked" Grid.Column
                         <RadioButton Content="badguy" HorizontalAlignment="Left"
                                      Margin="30,104,0,0" VerticalAlignment="Top"
                                      Name="badAIRadioButton" Checked="badAIRadioButton_Checked" Grid.Column="1"/>
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Teammate" >
+                    <Grid Background="AliceBlue" >
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition Height="148"/>
+                        </Grid.RowDefinitions>
+                        <Label Content="choose following teammates " FontWeight="Bold" FontSize="16"
+                               Margin="2,2,2,3" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Column="0"/>
+                        <RadioButton Content="lisa"  Grid.Row="1" VerticalAlignment="Top" Margin="3,10,0,0"/>
+                        <RadioButton Content="jenny" Grid.Row="1" VerticalAlignment="Top" Margin="3,31,0,0"/>
                     </Grid>
                 </TabItem>
             </TabControl>
