--- a/KarliCards.Gui/OptionsWindow.xaml
+++ b/KarliCards.Gui/OptionsWindow.xaml
@@ -4,11 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KarliCards.Gui"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="Option" Height="345" Width="434" ResizeMode="NoResize">
-    <Window.Resources>
-        <local:InversedBoolConverter x:Key="inverseBool" />
-    </Window.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -76,7 +74,7 @@ Name="cheatingAIRadioButton" Checked="cheatingAIRadioButton_Checked" Grid.Column
                     </Grid>
                 </TabItem>
                 <TabItem Header="Teammate" >
-                    <Grid Background="AliceBlue" >
+                    <Grid Background="#FFE5E5E5" >
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition Height="148"/>
@@ -85,6 +83,8 @@ Name="cheatingAIRadioButton" Checked="cheatingAIRadioButton_Checked" Grid.Column
                                Margin="2,2,2,3" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Column="0"/>
                         <RadioButton Content="lisa"  Grid.Row="1" VerticalAlignment="Top" Margin="3,10,0,0"/>
                         <RadioButton Content="jenny" Grid.Row="1" VerticalAlignment="Top" Margin="3,31,0,0"/>
+                        <RadioButton Content="rose" Grid.Row="1" VerticalAlignment="Top" Margin="3,52,0,0"/>
+                        <RadioButton Content="jisoo" Grid.Row="1" VerticalAlignment="Top" Margin="3,73,0,0"/>
                     </Grid>
                 </TabItem>
             </TabControl>
